# query_doc

./: .gitignore  README.md  custom_types.py  data_loader.py  eval.py  llm.py  main.py  pyproject.toml  streamlit_app.py  vector_db.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/docs/0/segments/81a13024-caa6-4a9b-95e6-f754aacf1028/: mutable_id_tracker.mappings
